[gd_scene load_steps=9 format=4 uid="uid://dnw0pgce7of51"]

[ext_resource type="Script" uid="uid://cq1bu3y4a2k4t" path="res://Scenes/Hallway/hallway.gd" id="1_iokpy"]
[ext_resource type="Texture2D" uid="uid://bcmaim0ecl81w" path="res://Art/hallway/hallway1.png" id="1_xqkei"]
[ext_resource type="PackedScene" uid="uid://bhhsgfpiopoku" path="res://Player/child_male/player.tscn" id="3_k0srb"]
[ext_resource type="PackedScene" uid="uid://duubfbdbw3nbf" path="res://Utils/loading/loading_zone.tscn" id="4_0syk5"]
[ext_resource type="PackedScene" uid="uid://dxga01sdtfqty" path="res://Utils/transition/transition_screen.tscn" id="5_nd3ex"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xqkei"]
texture = ExtResource("1_xqkei")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0

[sub_resource type="TileSet" id="TileSet_k0srb"]
sources/1 = SubResource("TileSetAtlasSource_xqkei")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nd3ex"]
size = Vector2(49, 73.25)

[node name="Hallway" type="Node"]
script = ExtResource("1_iokpy")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-224, 146)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAD+////AQAAAAAAAAD+/wAAAQAAAAEAAAD+/wEAAQAAAAIAAAD+/wIAAQAAAAMAAAD+/wMAAQAAAAQAAAD+/wQAAQAAAAUAAAD+/wUAAQAAAAYAAAD+/wYAAQAAAAcAAAD/////AQABAAAAAAD//wAAAQABAAEAAAD//wEAAQABAAIAAAD//wIAAQABAAMAAAD//wMAAQABAAQAAAD//wQAAQABAAUAAAD//wUAAQABAAYAAAD//wYAAQABAAcAAAAAAP//AQACAAAAAAAAAAAAAQACAAEAAAAAAAEAAQACAAIAAAAAAAIAAQACAAMAAAAAAAMAAQACAAQAAAAAAAQAAQACAAUAAAAAAAUAAQACAAYAAAAAAAYAAQACAAcAAAABAP//AQADAAAAAAABAAAAAQADAAEAAAABAAEAAQADAAIAAAABAAIAAQADAAMAAAABAAMAAQADAAQAAAABAAQAAQADAAUAAAABAAUAAQADAAYAAAABAAYAAQADAAcAAAACAP//AQAEAAAAAAACAAAAAQAEAAEAAAACAAEAAQAEAAIAAAACAAIAAQAEAAMAAAACAAMAAQAEAAQAAAACAAQAAQAEAAUAAAACAAUAAQAEAAYAAAACAAYAAQAEAAcAAAADAP//AQAFAAAAAAADAAAAAQAFAAEAAAADAAEAAQAFAAIAAAADAAIAAQAFAAMAAAADAAMAAQAFAAQAAAADAAQAAQAFAAUAAAADAAUAAQAFAAYAAAADAAYAAQAFAAcAAAAEAP//AQAGAAAAAAAEAAAAAQAGAAEAAAAEAAEAAQAGAAIAAAAEAAIAAQAGAAMAAAAEAAMAAQAGAAQAAAAEAAQAAQAGAAUAAAAEAAUAAQAGAAYAAAAEAAYAAQAGAAcAAAAFAP//AQAHAAAAAAAFAAAAAQAHAAEAAAAFAAEAAQAHAAIAAAAFAAIAAQAHAAMAAAAFAAMAAQAHAAQAAAAFAAQAAQAHAAUAAAAFAAUAAQAHAAYAAAAFAAYAAQAHAAcAAAAGAP//AQAIAAAAAAAGAAAAAQAIAAEAAAAGAAEAAQAIAAIAAAAGAAIAAQAIAAMAAAAGAAMAAQAIAAQAAAAGAAQAAQAIAAUAAAAGAAUAAQAIAAYAAAAGAAYAAQAIAAcAAAAHAP//AQAJAAAAAAAHAAAAAQAJAAEAAAAHAAEAAQAJAAIAAAAHAAIAAQAJAAMAAAAHAAMAAQAJAAQAAAAHAAQAAQAJAAUAAAAHAAUAAQAJAAYAAAAHAAYAAQAJAAcAAAAIAP//AQAKAAAAAAAIAAAAAQAKAAEAAAAIAAEAAQAKAAIAAAAIAAIAAQAKAAMAAAAIAAMAAQAKAAQAAAAIAAQAAQAKAAUAAAAIAAUAAQAKAAYAAAAIAAYAAQAKAAcAAAAJAP//AQALAAAAAAAJAAAAAQALAAEAAAAJAAEAAQALAAIAAAAJAAIAAQALAAMAAAAJAAMAAQALAAQAAAAJAAQAAQALAAUAAAAJAAUAAQALAAYAAAAJAAYAAQALAAcAAAAKAP//AQAMAAAAAAAKAAAAAQAMAAEAAAAKAAEAAQAMAAIAAAAKAAIAAQAMAAMAAAAKAAMAAQAMAAQAAAAKAAQAAQAMAAUAAAAKAAUAAQAMAAYAAAAKAAYAAQAMAAcAAAALAP//AQANAAAAAAALAAAAAQANAAEAAAALAAEAAQANAAIAAAALAAIAAQANAAMAAAALAAMAAQANAAQAAAALAAQAAQANAAUAAAALAAUAAQANAAYAAAALAAYAAQANAAcAAAAMAP//AQAOAAAAAAAMAAAAAQAOAAEAAAAMAAEAAQAOAAIAAAAMAAIAAQAOAAMAAAAMAAMAAQAOAAQAAAAMAAQAAQAOAAUAAAAMAAUAAQAOAAYAAAAMAAYAAQAOAAcAAAANAP//AQAPAAAAAAANAAAAAQAPAAEAAAANAAEAAQAPAAIAAAANAAIAAQAPAAMAAAANAAMAAQAPAAQAAAANAAQAAQAPAAUAAAANAAUAAQAPAAYAAAANAAYAAQAPAAcAAAAOAP//AQAQAAAAAAAOAAAAAQAQAAEAAAAOAAEAAQAQAAIAAAAOAAIAAQAQAAMAAAAOAAMAAQAQAAQAAAAOAAQAAQAQAAUAAAAOAAUAAQAQAAYAAAAOAAYAAQAQAAcAAAAPAP//AQARAAAAAAAPAAAAAQARAAEAAAAPAAEAAQARAAIAAAAPAAIAAQARAAMAAAAPAAMAAQARAAQAAAAPAAQAAQARAAUAAAAPAAUAAQARAAYAAAAPAAYAAQARAAcAAAAQAP//AQASAAAAAAAQAAAAAQASAAEAAAAQAAEAAQASAAIAAAAQAAIAAQASAAMAAAAQAAMAAQASAAQAAAAQAAQAAQASAAUAAAAQAAUAAQASAAYAAAAQAAYAAQASAAcAAAARAP//AQATAAAAAAARAAAAAQATAAEAAAARAAEAAQATAAIAAAARAAIAAQATAAMAAAARAAMAAQATAAQAAAARAAQAAQATAAUAAAARAAUAAQATAAYAAAARAAYAAQATAAcAAAASAP//AQAUAAAAAAASAAAAAQAUAAEAAAASAAEAAQAUAAIAAAASAAIAAQAUAAMAAAASAAMAAQAUAAQAAAASAAQAAQAUAAUAAAASAAUAAQAUAAYAAAASAAYAAQAUAAcAAAATAP//AQAVAAAAAAATAAAAAQAVAAEAAAATAAEAAQAVAAIAAAATAAIAAQAVAAMAAAATAAMAAQAVAAQAAAATAAQAAQAVAAUAAAATAAUAAQAVAAYAAAATAAYAAQAVAAcAAAAUAP//AQAWAAAAAAAUAAAAAQAWAAEAAAAUAAEAAQAWAAIAAAAUAAIAAQAWAAMAAAAUAAMAAQAWAAQAAAAUAAQAAQAWAAUAAAAUAAUAAQAWAAYAAAAUAAYAAQAWAAcAAAAVAP//AQAXAAAAAAAVAAAAAQAXAAEAAAAVAAEAAQAXAAIAAAAVAAIAAQAXAAMAAAAVAAMAAQAXAAQAAAAVAAQAAQAXAAUAAAAVAAUAAQAXAAYAAAAVAAYAAQAXAAcAAAAWAP//AQAYAAAAAAAWAAAAAQAYAAEAAAAWAAEAAQAYAAIAAAAWAAIAAQAYAAMAAAAWAAMAAQAYAAQAAAAWAAQAAQAYAAUAAAAWAAUAAQAYAAYAAAAWAAYAAQAYAAcAAAAXAP//AQAZAAAAAAAXAAAAAQAZAAEAAAAXAAEAAQAZAAIAAAAXAAIAAQAZAAMAAAAXAAMAAQAZAAQAAAAXAAQAAQAZAAUAAAAXAAUAAQAZAAYAAAAXAAYAAQAZAAcAAAAYAP//AQAaAAAAAAAYAAAAAQAaAAEAAAAYAAEAAQAaAAIAAAAYAAIAAQAaAAMAAAAYAAMAAQAaAAQAAAAYAAQAAQAaAAUAAAAYAAUAAQAaAAYAAAAYAAYAAQAaAAcAAAAZAP//AQAbAAAAAAAZAAAAAQAbAAEAAAAZAAEAAQAbAAIAAAAZAAIAAQAbAAMAAAAZAAMAAQAbAAQAAAAZAAQAAQAbAAUAAAAZAAUAAQAbAAYAAAAZAAYAAQAbAAcAAAA=")
tile_set = SubResource("TileSet_k0srb")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(476, 292)

[node name="Player" parent="." instance=ExtResource("3_k0srb")]
visible = false

[node name="LoadingZone" parent="." instance=ExtResource("4_0syk5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoadingZone"]
position = Vector2(476, 235)
shape = SubResource("RectangleShape2D_nd3ex")

[node name="TransitionScreen" parent="." instance=ExtResource("5_nd3ex")]

[connection signal="body_entered" from="LoadingZone" to="." method="_on_loading_zone_body_entered"]
